# piSynth

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  notes.md  setup.md
.github/workflows/: tests.yml
chapters/01_basic_sine/: CMakeLists.txt  README.md  main.cpp
chapters/02_midi_monitor/: README.md
chapters/03_simple_midi_synth/: CMakeLists.txt  config.hpp
chapters/03_simple_midi_synth/audio/: audio.hpp
chapters/03_simple_midi_synth/midi/: midi.hpp
chapters/03_simple_midi_synth/osc/: osc.hpp
chapters/04_poly_midi_synth/: CMakeLists.txt  config.hpp
chapters/04_poly_midi_synth/midi/: midi.cpp
chapters/04_poly_midi_synth/osc/: osc.cpp
chapters/04_poly_midi_synth/voice/: voice_manager.cpp  voice_manager.hpp
chapters/05_pluck_synth/: main.cpp
chapters/05_pluck_synth/audio/: audio.hpp
chapters/05_pluck_synth/midi/: midi.hpp
chapters/05_pluck_synth/osc/: osc.cpp
chapters/05_pluck_synth/voice/: voice.cpp  voice.hpp  voice_manager.cpp  voice_manager.hpp
chapters/06_pluck_synth_cc/: CMakeLists.txt
chapters/06_pluck_synth_cc/midi/: midi.cpp  synth_params.hpp
chapters/06_pluck_synth_cc/osc/: osc.hpp
chapters/06_pluck_synth_cc/voice/: voice.hpp  voice_manager.cpp  voice_manager.hpp
chapters/07_pluck_synth_effects/: README.md  main.cpp
chapters/07_pluck_synth_effects/midi/: midi.cpp
chapters/07_pluck_synth_effects/voice/: voice_manager.cpp
chapters/08_web_ui/: config.hpp
chapters/08_web_ui/common/: waveguide_snapshot.hpp
chapters/08_web_ui/fft/: fft_processor.hpp
chapters/08_web_ui/midi/: midi.hpp
chapters/08_web_ui/osc/: osc.cpp
chapters/08_web_ui/voice/: voice.hpp
chapters/08_web_ui/web/: messages.hpp  msg_dispatcher.hpp  web_server.cpp
chapters/09_plug_and_play/: README.md
chapters/09_plug_and_play/adsr/: adsr.hpp
chapters/09_plug_and_play/common/: synth_params.cpp
chapters/09_plug_and_play/effects/: freeverb.cpp  master_bus.hpp  ping_pong.cpp  ping_pong.hpp
chapters/09_plug_and_play/fft/: fft_processor.cpp
chapters/09_plug_and_play/midi/: midi.cpp
chapters/09_plug_and_play/voice/: note_event.hpp  voice.cpp  voice_manager.cpp
chapters/09_plug_and_play/web/: index.html  msg_builder.hpp
scripts/: README.md  analyze_onset.py  benchmark_cpu.sh  benchmark_latency.sh
src/: CMakeLists.txt  README.md  config.hpp  main.cpp
src/02_midi_monitor/: CMakeLists.txt  main.cpp
src/03_simple_midi_synth/: README.md  main.cpp
src/03_simple_midi_synth/audio/: audio.cpp
src/03_simple_midi_synth/midi/: midi.cpp
src/03_simple_midi_synth/osc/: osc.cpp
src/04_poly_midi_synth/: README.md  config.hpp
src/04_poly_midi_synth/adsr/: adsr.cpp  adsr.hpp
src/04_poly_midi_synth/osc/: osc.hpp
src/04_poly_midi_synth/voice/: ring_buffer.hpp  voice.hpp  voice_manager.cpp  voice_manager.hpp
src/05_pluck_synth/: CMakeLists.txt  README.md  config.hpp
src/05_pluck_synth/adsr/: adsr.cpp  adsr.hpp
src/05_pluck_synth/audio/: audio.cpp
src/05_pluck_synth/osc/: osc.cpp  osc.hpp
src/05_pluck_synth/voice/: voice.cpp  voice.hpp  voice_manager.cpp  voice_manager.hpp
src/06_pluck_synth_cc/: README.md
src/06_pluck_synth_cc/adsr/: adsr.cpp
src/06_pluck_synth_cc/audio/: audio.cpp  audio.hpp
src/06_pluck_synth_cc/midi/: midi.hpp  synth_params.cpp  synth_params.hpp
src/06_pluck_synth_cc/osc/: osc.cpp
src/06_pluck_synth_cc/voice/: voice_manager.cpp
src/06_pluck_synth_effects/: CMakeLists.txt  README.md  config.hpp  main.cpp
src/06_pluck_synth_effects/audio/: audio.cpp
src/06_pluck_synth_effects/voice/: voice.cpp  voice_manager.cpp  voice_manager.hpp
src/07_pluck_synth_effects/: CMakeLists.txt  README.md  config.hpp  main.cpp
src/07_pluck_synth_effects/adsr/: adsr.cpp  adsr.hpp
src/07_pluck_synth_effects/audio/: audio.cpp  audio.hpp
src/07_pluck_synth_effects/common/: smoothed_value.cpp  smoothed_value.hpp  synth_params.cpp  synth_params.hpp
src/07_pluck_synth_effects/effects/: chorus.cpp  chorus.hpp  freeverb.cpp  freeverb.hpp  master_bus.cpp  master_bus.hpp  ping_pong.cpp  svf.cpp  svf.hpp
src/07_pluck_synth_effects/effects/primitives/: allpass.cpp  allpass.hpp  comb.cpp  comb.hpp  delay_line.cpp  lfo.cpp  one_pole.cpp  one_pole.hpp
src/07_pluck_synth_effects/midi/: midi.cpp  midi.hpp  smoothed_value.cpp  smoothed_value.hpp  synth_params.cpp  synth_params.hpp
src/07_pluck_synth_effects/osc/: osc.cpp  osc.hpp
src/07_pluck_synth_effects/voice/: voice.cpp  voice.hpp  voice_manager.cpp  voice_manager.hpp
src/08_web_ui/: CMakeLists.txt  README.md  config.hpp  main.cpp
src/08_web_ui/audio/: audio.cpp  audio.hpp
src/08_web_ui/effects/: svf.cpp
src/08_web_ui/fft/: fft_processor.cpp
src/08_web_ui/osc/: osc.hpp
src/08_web_ui/voice/: voice.cpp  voice.hpp  voice_manager.cpp
src/08_web_ui/web/: index.html  messages.hpp  msg_builder.hpp  msg_parser.hpp  web_server.cpp  web_server.hpp
src/09_plug_and_play/: CMakeLists.txt  README.md  config.hpp  main.cpp
src/09_plug_and_play/audio/: audio.cpp  audio.hpp
src/09_plug_and_play/common/: smoothed_value.cpp  synth_params.cpp  synth_params.hpp
src/09_plug_and_play/effects/: freeverb.hpp  svf.hpp
src/09_plug_and_play/fft/: fft_accumulator.hpp  fft_processor.cpp  fft_processor.hpp
src/09_plug_and_play/midi/: midi.cpp  midi.hpp
src/09_plug_and_play/voice/: voice_manager.hpp
src/09_plug_and_play/web/: index.html  messages.hpp  msg_builder.hpp  (+3 more)
src/adsr/: adsr.cpp  adsr.hpp
src/audio/: audio.cpp  audio.hpp
src/common/: synth_params.cpp  synth_params.hpp  waveguide_snapshot.hpp
src/effects/: master_bus.cpp  svf.cpp
src/fft/: fft_accumulator.hpp  fft_processor.cpp  fft_processor.hpp
src/midi/: midi.cpp  midi.hpp
src/osc/: osc.cpp  osc.hpp
src/voice/: ring_buffer.hpp  voice.hpp  voice_manager.cpp
src/web/: embed_html.cmake  html_content.cpp.in  index.html  messages.hpp  msg_parser.hpp  web_server.cpp  web_server.hpp
systemd/: pi-synth.service
tests/: CMakeLists.txt  doctest.h  test_adsr.cpp  test_fft_stability.cpp  test_lfo.cpp  test_main.cpp  test_pluck.cpp  test_ring_buffer.cpp  test_smoothed_value.cpp  test_svf.cpp
(+10 files in other folders)
